# bevy-roguedef

./: .gitignore  Cargo.toml  Makefile  concept.md  design.md  readme.md  roflo-names.md  rules.md  rustfmt.toml  step2.md  step3.md  steps.md  steps_1.md
.cargo/: config.toml
assets/data/: data.game.ron
assets/data/creatures/: player.creature.ron  slime_big.creature.ron  slime_small.creature.ron
assets/data/doodads_category/: village.dodc.ron
assets/data/effects/: melee-damage.effect.ron
assets/data/projectiles/: sword.projectile.ron
assets/data/spells/: melee-damage.spell.ron
assets/data/weapons/: sword.weapon.ron
assets/data2/doodads/: fences.mga.ron
assets/data2/doodads_categories/: all.mga.ron
assets/maps/example/: albedo.ktx2  info.txt  lay0.heightmap.r8
assets/mesh/debug/: example_level.glb  example_level.hmdata.ron
assets/mesh/village/: fences.glb
assets/shaders/: colors.wgsl  noise.wgsl  terrain.wgsl
assets/textures/ground/: grass.ktx2  white_rock.ktx2
assets/textures/placeholders/: blueprint_1024.ktx2  grid.ktx2  grid_blueprint.ktx2  grid_orange.ktx2
assets/ui/: health_bar_example.riv
assets_src/maps/example/: albedo.ron
assets_src/textures/ground/: white_rock.ron
crates/bake-assets/: Cargo.toml
crates/bake-assets/src/: main.rs  paths.rs
crates/brg_core/: Cargo.toml
crates/brg_core/src/: lib.rs
crates/brg_editor/: Cargo.toml
crates/brg_editor/src/: lib.rs
crates/brg_editor/src/features/: enums.rs  fun.rs  mod.rs  plug.rs  res.rs  sys.rs
crates/brg_editor/src/inspector/: mod.rs  plug.rs
crates/brg_editor/src/panels/: mod.rs  plug.rs
crates/brg_editor/src/panels/doodads/: enum_bank.rs  mod.rs  plug.rs  res_state.rs  sup.rs  sys_display_panel.rs  sys_init_state.rs
crates/brg_editor/src/stats/: plug.rs  res.rs  sys.rs
crates/brg_editor/src/undoredo/: command.rs  command_cmn_spawn.rs  mod.rs  plug.rs  res_state.rs  stack.rs  sup_editor_commands.rs  sys_debug.rs  sys_on_command_execute.rs
crates/brg_fundamental/: Cargo.toml
crates/brg_fundamental/src/: lib.rs
crates/brg_scene/: Cargo.toml
crates/brg_scene/src/: lib.rs
crates/brg_scene/src/assets/: asset.rs  asset_creatures.rs  asset_doodad.rs  asset_effect.rs  asset_hm_data.rs  asset_level.rs  asset_projectile.rs  asset_sound.rs  asset_spell.rs  asset_weapon.rs  mod.rs  plug.rs
crates/brg_scene/src/assets2/: asset_level.rs  assets_mgas.rs  assets_mgas_doodads.rs  cmp.rs  dto_status.rs  evt_on_load.rs  mod.rs  plug.rs  res_loading_state.rs  res_storage.rs  sup_assets.rs  sup_loader.rs  sys_loadscreen.rs  sys_on_load.rs
crates/brg_scene/src/features/: enums.rs  fun.rs  mod.rs  plug.rs  sup.rs
crates/brg_scene/src/features/editor/: enums.rs  fun.rs  mod.rs  plug.rs  res.rs  sup.rs  sys.rs
crates/brg_scene/src/level/: data.rs  data_v1.rs  data_v2.rs  data_v2_api.rs  data_v2_encode.rs  heights.rs  interpolate.rs  mod.rs
crates/brg_scene/src/state/: enums.rs  mod.rs  plug.rs  sup_game_manager.rs  sys_switch_pause.rs
crates/brg_scene/src/system_set/: enums.rs  fun_init_sets.rs  mod.rs  plug.rs
crates/fmt-imports/: Cargo.toml
crates/fmt-imports/src/: main.rs
crates/height-baker/: Cargo.toml
crates/height-baker/src/: main.rs
crates/height-preview/: Cargo.toml
crates/height-preview/src/: main.rs
crates/sandbox/src/: main.rs
src/: consts.rs  game.rs  main.rs
src/components/: mod.rs  movement.rs  player.rs  plug.rs  transform.rs  unit.rs  unit_creature.rs  unit_creature_player.rs
src/components/gizmosx/: mod.rs  primitives.rs  sup.rs
src/components/lib/: mod.rs  vec2.rs  vec3.rs
src/components/tiles/: area.rs  chunk.rs  consts.rs  mod.rs  range.rs  select.rs  selection.rs  tile.rs
src/core/: measurements.rs
src/editor/: mod.rs  plug.rs
src/editor/world_gizmos/: mod.rs  plug.rs  sys_debug_draw_coords.rs  sys_debug_draw_world_origin.rs
src/game/: ai.rs  collisions.rs  common.rs  damage.rs  enemies.rs  energy.rs  mod.rs  plug.rs  projectiles.rs  sound.rs  teams.rs  tower.rs  weapons.rs
src/game/buildings/: mod.rs  plug.rs  sup.rs  sys.rs
src/old_components/: ai.rs  mod.rs  plug.rs  unit.rs  unit_creature.rs  unit_creature_player.rs
src/old_game/: common.rs  enemies.rs  plug.rs  sound.rs  weapons.rs
src/old_game/buildings/: plug.rs
src/old_plugins/: mod.rs  plug.rs
src/old_plugins/assets/: asset.rs  asset_game.rs  mod.rs  plug.rs
src/old_plugins/core/: plug.rs
src/old_plugins/gameplay/: plug.rs
src/old_prefabs/: entities.rs  sup.rs
src/plugins/: mod.rs  plug.rs
src/plugins/assets/: asset.rs  asset_creatures.rs  asset_game.rs  asset_ldtk_circuit.rs  mod.rs  plug.rs
src/plugins/core/: mod.rs  plug.rs
src/plugins/editor/: mod.rs  plug.rs
src/plugins/gameplay/: mod.rs  plug.rs
src/prefabs/: entities.rs  mod.rs  pref_example_scene.rs  pref_mobs.rs  pref_player.rs  pref_projectiles.rs  sup.rs  sup_prefabs.rs
src/units/: cmp_team.rs  cmp_unit.rs  cmp_unit_building.rs  cmp_unit_creature.rs  mod.rs  plug.rs  sys_movement.rs
src/units/ai/: cmp_ai.rs  mod.rs  plug.rs  sys_ai_behavior_simple.rs
src/units/mobs/: enum_mob_type.rs  mod.rs  plug.rs  res_spawn.rs  sys_spawn.rs
src/units/player/: cmp_marker_player.rs  mod.rs  plug.rs  sys_movement_input.rs  sys_spawn_player.rs  sys_weapon_fire.rs
src/units/spells/: mod.rs  plug.rs  sup.rs
src/units/stats/: mod.rs  plug.rs
src/units/weapon/: cmp_weapon.rs  enum_fire_trigger.rs  enum_phase.rs  evt_reload.rs  evt_shot.rs  mod.rs  plug.rs  sys_handle_events.rs  sys_reset_trigger.rs  sys_weapons.rs
src/world/: mod.rs  plug.rs  sys_debug_draw_world_origin.rs  sys_spawn_example_objects.rs  sys_spawn_light.rs
src/world/camera/: cmp.rs  cmp_active_camera.rs  enums.rs  mod.rs  plug.rs  res.rs  sys_editor_fly.rs  sys_editor_move_ortho.rs  sys_spawn_cameras.rs  sys_switch_camera.rs  sys_update_game_camera.rs
src/world/landscape/: cmp.rs  cmp_actor_initiator.rs  dto.rs  enum_lod_level.rs  evt_actor_move_in_chunk.rs  lod_quadtree.rs  material.rs  mod.rs  plug.rs  res_actor_tracker.rs  res_state.rs  sup.rs  sup_auto_loading.rs  sup_mesh.rs  sup_spawn_chunk.rs  (+5 more)
(+179 files in other folders)
