[package]
name = "bevy-roguedef"
version = "0.1.0"
edition = "2021"

# todo: bevy opts: https://bevyengine.org/learn/quick-start/getting-started/setup/
# todo: dynamic_linking is only for dev (remove on release)
# todo: use default linker (remove .cargo/config.toml)
# todo: use stable toolchain

#[toolchain] # todo: is needed?
#channel = "nightly"
# djieqwjeiqw вшыфвофыовофы

[workspace]
resolver = "2"
members = [
    "crates/*",
]

[dependencies]
# parts
brg_core = { path = "crates/brg_core" }
brg_editor = { path = "crates/brg_editor" }
brg_scene = { path = "crates/brg_scene" }
# bevy staff
bevy = { version = "0.15.0", features = ["dynamic_linking", "wav"] }
bevy_framepace = {version = "0.18.0"}
bevy_asset_loader = { version = "0.22.0" }
bevy-trait-query = {version = "0.7.0"}
bevy_vector_shapes = { version = "0.9.3" }
bevy_sprite3d = {version = "4.0.0"}
bevy-inspector-egui = { version = "0.28.0" }
ron_asset_manager = { version = "0.5.2" }
# rust libs
serde = { version = "1.0.215", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
lazy_static = "1.5.0"
rand_chacha = "0.3.1"
uuid = "1.11.0"
anyhow = "1.0.94"
serde_json = "1.0.133"
priority-queue = "2.1.1"

[workspace.metadata.dylint]
libraries = [
    { git = "https://github.com/MinerSebas/bevy_lint", branch = "main" },
]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
