[package]
name = "bevy-roguedef"
version = "0.1.0"
edition = "2021"

# todo: bevy opts: https://bevyengine.org/learn/quick-start/getting-started/setup/
# todo: dynamic_linking is only for dev (remove on release)
# todo: use default linker (remove .cargo/config.toml)
# todo: use stable toolchain

#[toolchain] # todo: is needed?
#channel = "nightly"
# djieqwjeiqw вшыфвофыовофы

[workspace]
resolver = "2"
members = [
    "crates/*",
]

[dependencies]
# parts
brg_core = { workspace = true }
brg_editor = { workspace = true }
brg_scene = { workspace = true }
brg_fundamental = { workspace = true }

# bevy staff
bevy = { workspace = true }
bevy_framepace = {workspace = true}
bevy-inspector-egui = {workspace = true}
# rust libs
strum = {workspace = true}
auto-impl-ops = {workspace = true}
bevy_health_bar3d = {workspace = true}


[workspace.dependencies]
brg_core = { path = "crates/brg_core" }
brg_editor = { path = "crates/brg_editor" }
brg_scene = { path = "crates/brg_scene" }
brg_fundamental = { path = "crates/brg_fundamental" }
bevy = { version = "0.15.0", features = ["dynamic_linking", "wav"] }
bevy-inspector-egui = { version = "0.28.0" }
bevy_asset_loader = { version = "0.22.0" }
bevy_framepace = {version = "0.18.0"}
# bevy-trait-query = {version = "0.7.0"}
bevy-persistent = { version = "0.7.0", features = ["json"] }
bevy_health_bar3d = {version = "3.4.0"}
ron_asset_manager = { path = "../ron_asset_manager" }
auto-impl-ops = { version = "0.2.1" }
strum = { version = "0.26.3", features = ["derive"] }
iyes_perf_ui = { git="https://github.com/IyesGames/iyes_perf_ui.git", branch = "main" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde-binary = "0.5.0"
rand_chacha = "0.3.1"
dirs = "5.0.1"
anyhow = "1.0.94"
binary_rw = "4.1.0"
ron = "0.8.1"
#lazy_static = "1.5.0"
#uuid = "1.11.0"
#priority-queue = "2.1.1"

[workspace.metadata.dylint]
libraries = [
    { git = "https://github.com/MinerSebas/bevy_lint", branch = "main" },
]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
