[package]
name = "brg_editor"
version = "0.1.0"
edition = "2024"

[dependencies]
brg_core = {workspace = true}
bevy = {workspace = true}
bevy-inspector-egui = {workspace = true}
bevy-persistent = {workspace = true}
iyes_perf_ui = {workspace = true}
strum = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
anyhow = {workspace = true}