[package]
name = "brg_scene"
version = "0.1.0"
edition = "2024"

[dependencies]
brg_core = { workspace = true }
bevy = {workspace = true}
bevy_asset_loader = {workspace = true}
bevy-persistent = {workspace = true}
bevy-inspector-egui = {workspace = true}
ron_asset_manager = {workspace = true}
strum = {workspace = true}
serde = {workspace = true}
serde-binary = {workspace = true}
serde_json = {workspace = true}
anyhow = {workspace = true}
binary_rw = {workspace = true}